style.css
/*
Theme Name: WP Binge
Text Domain: wpbinge.com
Version: 1.0
Description: Responsive, right sidebar theme, blog
Tags: responsive, minimalist
Author: Connor Ocampo
Author URI: https://connorocampo.dev
*/

:root {
  --black: #22272d;
  --blueSecondary: #34364c;
  --blueTertiary: #468ee2;
  --aqua: #5ab6d5;
  --grey: #f5f5f5;
  --orange: #d75c37;
  --yellow: #ffc046;
  --hotpink: #ff4250;
  --red: #d95252;
  --purple: #c73967;
  --breakpoint-xs: 0;
  --breakpoint-sm: 576px;
  --breakpoint-md: 768px;
  --breakpoint-lg: 992px;
  --breakpoint-xl: 1200px;
  --width-blog-content: 600px;

  /* FONT STYLES */

  --font-family-open-sans: "Open Sans", sans-serif, -apple-system,
    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji",
    sans-serif;
  --font-family-open-sans-bold: "Open Sans Bold", "Noto Sans Bold", sans-serif,
    -apple-system, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
    "Noto Color Emoji", sans-serif;
  --font-family-domine: "Domine", Arial, sans-serif, -apple-system,
    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji",
    sans-serif;
  --font-family-domine-bold: "Domine Bold", Arial, sans-serif, -apple-system,
    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji",
    sans-serif;

  /* Font Sizes */
  --font-size-body-desktop: 18px;
  --font-size-h1-responsive: 32px;
  --font-size-h2-responsive: 24px;
  --font-size-body-responsive: 16px;

  /* SIDEBAR */
  --sidebar-width: 280px;
  --content-max-width: 860px;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

@font-face {
  font-family: "Domine";
  src: local("Domine"),
    url(assets/fonts/domine-v7-latin-regular.woff) format("woff");
  font-display: swap;
}

@font-face {
  font-family: "Domine Bold";
  src: local("Domine Bold"),
    url(assets/fonts/domine-v7-latin-700.woff) format("woff");
  font-display: swap;
}

@font-face {
  font-family: "Open Sans";
  src: local("Open Sans"),
    url(assets/fonts/open-sans-v17-latin-regular.woff) format("woff");
  font-display: swap;
}

@font-face {
  font-family: "Open Sans Italic";
  src: local("Open Sans Italic"),
    url(assets/fonts/open-sans-v17-latin-italic.woff) format("woff");
  font-display: swap;
}

@font-face {
  font-family: "Open Sans Bold";
  src: local("Open Sans Bold"),
    url(assets/fonts/open-sans-v17-latin-700.woff) format("woff");
  font-display: swap;
}

@font-face {
  font-family: "Open Sans Black";
  src: local("Open Sans Black"),
    url(assets/fonts/open-sans-v17-latin-800.woff) format("woff");
  font-display: swap;
}

body {
  background: var(--grey);
  margin: 0;
  padding: 0;
}

a {
  font-family: var(--font-family-open-sans);
  text-decoration: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--font-family-domine);
  line-height: 1.5;
}

h1 {
  font-size: 36px;
}

h2 {
  font-size: 28px;
}

h3 {
  font-size: 24px;
}

ul,
ol,
p {
  font-family: var(--font-family-open-sans);
  font-size: var(--font-size-body-desktop);
  line-height: 1.75;
}

.main-content li {
  margin-bottom: 1em;
}

.read-more-link {
  color: var(--black);
  font-family: var(--font-family-open-sans-bold);
  font-size: var(--font-size-body-desktop);
  margin-top: 20px;
}

.blog-list .post p a {
  color: var(--black);
  text-decoration: underline;
}

.read-more-link:hover {
  border-bottom: 3px solid #ffc046;
}

/* NAVIGATION */

header {
  align-items: center;
  background: var(--black);
  box-shadow: 0px 3px 25px #333;
  display: flex;
  justify-content: center;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 9000;
}

nav {
  overflow: hidden;
  width: var(--breakpoint-xl);
}

nav img {
  height: 50px;
  margin-top: 5px;
}

nav a {
  color: var(--grey);
  display: block;
  float: left;
  font-family: var(--font-family-open-sans-bold);
  font-size: 18px;
  padding: 20px 1em;
  margin: 0 1px;
  text-decoration: none;
}

.nav-links {
  display: flex;
  float: right;
  margin-top: 15px;
  text-transform: uppercase;
}

.nav-links li {
  list-style: none;
}

.nav-links a:hover {
  color: var(--yellow);
}

.active a {
  color: var(--yellow);
}

.nav-btn {
  background: var(--black);
  border: none;
  color: #fff;
  text-transform: uppercase;
  font-weight: bold;
  display: none;
}

/* PAGE / MAIN CONTENT  */

.main-content {
  display: flex;
  justify-content: space-between;
  margin: 60px auto 90px auto;
  margin-top: 170px;
  padding: 0 1em;
  width: 1200px;
}

blockquote.wp-block-quote {
  border-left: 5px solid #ffc046;
  padding-left: 2em;
  margin-left: 0;
}

/* BLOG LIST PAGE */

.blog-list {
  background: #fff;
  display: flex;
  height: fit-content;
  flex-direction: column;
  /* width: 830px; */
  width: 800px;
}

hr:first-child {
  display: none;
}

hr {
  border: 1px solid #f5f5f5;
  margin: 80px auto 0 0;
  margin: 40px auto 0 0;
  /* width: 830px; */
  width: 800px;
}

hr:last-child {
  margin-bottom: 0px;
}

.post {
  margin: 60px auto 0 auto;
  margin: 60px auto;
  width: 600px;
}

.pagination {
  display: flex;
  justify-content: space-between;
  margin: 0px auto;
  position: relative;
  top: 85px;
  width: var(--width-blog-content);
}

span.page-numbers.current {
  color: var(--yellow);
  font-family: var(--font-family-open-sans-bold);
  font-size: 18px;
  padding: 20px 1em;
}

.pagination a {
  color: var(--black);
}

.blog-post-title {
  margin: 10px 0;
}

.blog-post-title a {
  color: var(--black);
  font-family: var(--font-family-domaine-bold);
  line-height: 1.25;
  margin-bottom: 7px;
}

.date {
  color: var(--black);
  font-family: var(--font-family-open-sans);
  font-size: var(--font-size-body-desktop);
  margin-right: 10px;
}

/* TAGS */

.tag {
  background: var(--blueTertiary);
  border-radius: 5px;
  color: #fff;
  display: inline-block;
  font-family: var(--font-family-open-sans);
  font-size: var(--font-size-body-responsive);
  margin-bottom: 10px;
  padding: 5px 10px;
}

.tag a {
  color: var(--grey);
}
/* ... */

